Achievement text fixes.
- Fixed achievement image size.
- Fixed achievement text overflowing the container and getting cut off.

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,15 @@
 	-fx-font-family: "Roboto Thin";
 }
 
+.heading1{
+	-fx-font-size:36px;
+	-fx-font-family: "Roboto Thin";
+}
+
+.normal {
+	-fx-font-family: "Roboto";
+}
+
 #progressBar {
 	-fx-accent: #2196F3;
 }
@@ -143,7 +152,7 @@
 
 #achievement {
 	-fx-background-position:center;
-	-fx-background-size:173px 225px;
+	-fx-background-size:138px 180px;
   	-fx-background-repeat:no-repeat;
   	-fx-background-image:url('images/achievement.png');
 }
